<resources>
    <string name="app_name">Taskmanager4result</string>
    <string name="add_task">Добавить задачу</string>
    <string name="filter_all">Все задачи</string>
    <string name="filter_completed">Завершенный</string>
    <string name="filter_incomplete">Не выполненные</string>
    <string name="task_title">Название задачи</string>
    <string name="task_description">Описание задачи</string>
    <string name="due_date">Срок</string>
    <string name="set_due_date">Установить дату выполнения</string>
    <string name="take_photo">Сделать фото</string>
    <string name="save_task">Сохранить задачу</string>
    <string-array name="filter_options">
        <item>@string/filter_all</item>
        <item>@string/filter_completed</item>
        <item>@string/filter_incomplete</item>
    </string-array>
</resources>
